plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.16'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

jacocoTestReport {
    reports { html.required = true }
    dependsOn test
}
jacocoTestCoverageVerification {
    violationRules { rule { limit { minimum = 0.70 } } }
}

group = 'com.app'
version = '1.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

// 맥/윈도우 혼용 환경 인코딩 고정 (윈도우 기본값 MS949로 컴파일·출력 깨짐 방지)
tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
tasks.withType(Test).configureEach {
    systemProperty 'file.encoding', 'UTF-8'
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Web
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // SOAP / WebService 사용하는 경우만 유지
    implementation 'org.springframework.boot:spring-boot-starter-web-services'

    // Security / OAuth2
    implementation 'org.springframework.boot:spring-boot-starter-security'
//    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // Request Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.7'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.7'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.7'

    // Spring Batch
    implementation 'org.springframework.boot:spring-boot-starter-batch'
    // Actuator + Prometheus
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // DB - MyBatis
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'

    // Database Driver
    // MariaDB
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

    // Redis / Cache
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
//    implementation 'org.springframework.boot:spring-boot-starter-cache'

    // Swagger / OpenAPI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.17'

    // Thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

    // AOP
    //Aspect사용
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    // DTO Mapping
    implementation 'org.modelmapper:modelmapper:3.2.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Configuration Processor
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    // DevTools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Test
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // JUnit5 + Mockito + AssertJ + MockMvc + TestRestTemplate 한 번에
    /*
        - spring-boot-starter-test 포함 라이브러리:
        - JUnit 5  — 테스트 프레임워크
        - Mockito  — Mock 객체 생성·검증
        - AssertJ  — 가독성 높은 Assertion 라이브러리
        - Spring Test — MockMvc, TestRestTemplate
    */
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    // 테스트용 인메모리 DB
    testRuntimeOnly 'com.h2database:h2'

    // security test
    testImplementation 'org.springframework.security:spring-security-test'

    // Image - 	프로필/게시물 이미지 처리 기능을 이전할 때 추가
//    implementation 'net.coobird:thumbnailator:0.4.8'

    //sms 인증 사용시
//    implementation 'net.nurigo:sdk:4.3.2'

    //WebClient 기반 외부 API/LLM 호출 코드를 그대로 이전할 때만 추가
//    spring-boot-starter-webflux
    //WebFlux/Reactor 코드를 테스트할 때 추가
//    testImplementation 'io.projectreactor:reactor-test'

    //XML request/response 또는 외부 XML API가 있을 때 추가
//    com.fasterxml.jackson.dataformat:jackson-dataformat-xml
}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy tasks.named('jacocoTestReport')
}
